// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allSpaceTreatment renders 0 1`] = `
Array [
  .c0 {
  all-space-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders function 1`] = `
Array [
  .c0 {
  all-space-treatment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: has;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: has;
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders invalid theme path 1`] = `
Array [
  .c0 {
  all-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders negative number 1`] = `
Array [
  .c0 {
  all-space-treatment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    all-space-treatment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    all-space-treatment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    all-space-treatment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    all-space-treatment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    all-space-treatment: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    all-space-treatment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    all-space-treatment: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    all-space-treatment: July;
  }
}

@media April {
  .c0 {
    all-space-treatment: August;
  }
}

@media January {
  .c0 {
    all-space-treatment: September;
  }
}

@media April {
  .c0 {
    all-space-treatment: November;
  }
}

@media June {
  .c0 {
    all-space-treatment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    all-space-treatment: July;
  }
}

@media April {
  .c0 {
    all-space-treatment: August;
  }
}

@media January {
  .c0 {
    all-space-treatment: September;
  }
}

@media April {
  .c0 {
    all-space-treatment: November;
  }
}

@media June {
  .c0 {
    all-space-treatment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    all-space-treatment: January;
  }
}

@media April {
  .c0 {
    all-space-treatment: December;
  }
}

@media January {
  .c0 {
    all-space-treatment: April;
  }
}

@media April {
  .c0 {
    all-space-treatment: May;
  }
}

@media June {
  .c0 {
    all-space-treatment: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    all-space-treatment: January;
  }
}

@media April {
  .c0 {
    all-space-treatment: December;
  }
}

@media January {
  .c0 {
    all-space-treatment: April;
  }
}

@media April {
  .c0 {
    all-space-treatment: May;
  }
}

@media June {
  .c0 {
    all-space-treatment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders postitive number 1`] = `
Array [
  .c0 {
  all-space-treatment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders string 1`] = `
Array [
  .c0 {
  all-space-treatment: July;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: July;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: June;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: June;
}

<div
    className="c0"
  />,
]
`;

exports[`allSpaceTreatment renders valid theme path 1`] = `
Array [
  .c0 {
  all-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  all-space-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
